--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "tailwindcss": "^4.1.16",
     "zustand": "^5.0.8"
   },
