--- a/server/server/build.gradle
+++ b/server/server/build.gradle
@@ -15,8 +15,8 @@ android {
 
     defaultConfig {
         minSdk 23
-        versionCode 1
-        versionName '1.0'
+        versionCode 2
+        versionName '1.1'
     }
 
     buildTypes {
@@ -40,7 +40,7 @@ android.applicationVariants.all { variant ->
     variant.outputs.all {
         outputFileName = "aya-server-v${versionName}.apk"
 
-        def dexPath = rootProject.rootDir.path
+        def dexPath = new File(rootProject.rootDir.parentFile, "resources").path
         variant.assembleProvider.get().doLast {
             copy {
                 def file = zipTree(file(outputFile)).matching { include 'classes*.dex' }.singleFile
